<resources>
    <string name="app_name">Remote Stick</string>
    <string name="title_activity_add_device">Подключение по IP</string>
    <string name="available_devices">Доступные устройства</string>
    <string name="ip_address">IP-адрес:</string>
    <string name="ip_address_example">Например, 192.168.0.102</string>
    <string name="action_connect">Подключиться</string>

    <!--Названия клавиш клавиатуры.-->
    <string name="shift">Shift</string>
    <string name="ctrl">Ctrl</string>
    <string name="alt">Alt</string>
    <string name="esc">Esc</string>
    <string name="insert">Insert</string>
    <string name="tab">Tab</string>
    <string name="delete">Delete</string>
    <string name="prt_sc">Prt Sc</string>
    <string name="home">Home</string>
    <string name="pg_up">PgUp</string>
    <string name="pg_dn">PgDn</string>
    <string name="end">End</string>
    <string name="enter">Enter</string>
    <string name="zero_symbol">0</string>
    <string name="dot_symbol">.</string>
    <string name="equal_symbol">=</string>
    <string name="plus_symbol">+</string>
    <string name="minus_symbol">-</string>

    <!--Описание графических кнопок-->
    <string name="available_devices_button_description">available devices icon</string>
    <string name="add_device_icon_description">add device button</string>
    <string name="special_keys_button_description">special keys button</string>
    <string name="win_button_description">win button</string>
    <string name="search_button_description">search button</string>
    <string name="explorer_button_description">explorer button</string>
    <string name="arrow_up_button_description">arrow up button</string>
    <string name="arrow_down_button_description">arrow down button</string>
    <string name="arrow_left_button_description">arrow left button</string>
    <string name="arrow_right_button_description">arrow right button</string>
    <string name="copy_button_description">copy button</string>
    <string name="paste_button_description">paste button</string>
    <string name="show_desktop_button_description">show desktop button</string>
    <string name="fn_switch_num_button_description">fn switch num button</string>
    <string name="play_pause_button_description">play/pause button</string>
    <string name="previous_track_button_description">previous track button</string>
    <string name="next_track_button_description">next track button</string>
    <string name="mute_button_description">mute button</string>
    <string name="stop_button_description">stop button</string>
    <string name="back_button_description">back button</string>
    <string name="forward_button_description">forward button</string>
    <string name="home_button_description">home button</string>
    <string name="refresh_button_description">refresh button</string>
    <string name="zoom_in_button_description">zoom in button</string>
    <string name="zoom_out_button_description">zoom out button</string>
    <string name="full_screen_button_description">full screen button</string>
    <string name="previous_tab_button_description">previous tab button</string>
    <string name="next_tab_button_description">next tab button</string>
    <string name="new_tab_button_description">new tab button</string>
    <string name="close_tab_button_description">close tab button</string>
    <string name="last_tab_button_description">last tab button</string>
    <string name="start_button_description">start button</string>
    <string name="continue_button_description">continue button</string>
    <string name="stop_presentation_button_description">stop presentation button</string>
    <string name="pointer_button_description">pointer button</string>
    <string name="previous_slide_button_description">previous slide button</string>
    <string name="next_slide_button_description">next slide button</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_media_fragment">Hello media fragment</string>
</resources>
