<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.activities.ControlActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/toolbar"
            android:background="@drawable/light_gradient">

        <ru.vladamamutova.remotestick.ui.custom.TouchpadView
                android:id="@+id/touchpad"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        <ru.vladamamutova.remotestick.ui.custom.KeyboardTextView
                android:id="@+id/keyView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/buttonPanel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/body_text"
                android:padding="@dimen/medium_intent"/>

        <LinearLayout android:id="@+id/buttonPanel"
                      android:layout_width="match_parent"
                      android:layout_height="@dimen/tab_layout_height"
                      android:orientation="horizontal"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_margin="@dimen/small_intent">

            <Button android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/mouse_button_background"
                    android:onClick="onLeftClick"/>

            <TextView android:layout_width="@dimen/small_intent"
                      android:layout_height="match_parent"/>

            <Button android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/mouse_button_background"
                    android:onClick="onMiddleClick"/>

            <TextView android:layout_width="@dimen/small_intent"
                      android:layout_height="match_parent"/>

            <Button android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/mouse_button_background"
                    android:onClick="onRightClick"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                style="@style/CustomTabLayout"
                android:layout_width="0dp"
                android:layout_height="@dimen/tab_layout_height"
                app:tabMode="fixed"
                app:tabGravity="fill"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/specialKeysButton"/>

        <ImageButton android:id="@+id/specialKeysButton"
                     android:layout_width="@dimen/tab_layout_height"
                     android:layout_height="@dimen/tab_layout_height"
                     android:background="@color/lightBackground"
                     android:src="@drawable/ic_alt"
                     android:tint="@color/special_keys_button_color"
                     android:layout_alignParentEnd="true"
                     android:contentDescription="@string/special_keys_button_description"
                     android:onClick="onSpecialKeysButtonClick"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_below="@id/tabs">

            <GridLayout android:id="@+id/specialKeysPanel"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:columnCount="6"
                        android:paddingHorizontal="@dimen/medium_intent"
                        android:paddingVertical="@dimen/tiny_intent"
                        android:visibility="gone">

                <Button android:id="@+id/ctrlButton"
                        style="@style/SpecialKeyButton"
                        android:text="@string/ctrl"
                        android:layout_column="0"
                        android:onClick="onSpecialKeyClick"/>

                <Button android:id="@+id/shiftButton"
                        style="@style/SpecialKeyButton"
                        android:text="@string/shift"
                        android:layout_column="1"
                        android:onClick="onSpecialKeyClick"/>

                <Button android:id="@+id/altButton"
                        style="@style/SpecialKeyButton"
                        android:text="@string/alt"
                        android:layout_column="2"
                        android:onClick="onSpecialKeyClick"/>

                <ImageButton android:id="@+id/winButton"
                             style="@style/SpecialKeyButton"
                             android:src="@drawable/ic_windows"
                             android:layout_column="3"
                             android:contentDescription="@string/win_button_description"
                             android:onClick="onSpecialKeyClick"/>

                <ImageButton android:id="@+id/searchButton"
                             style="@style/SpecialKeyButton"
                             android:src="@drawable/ic_search"
                             android:layout_column="4"
                             android:contentDescription="@string/search_button_description"
                             android:onClick="onSpecialKeyClick"/>

                <ImageButton android:id="@+id/explorerButton"
                             style="@style/SpecialKeyButton"
                             android:src="@drawable/ic_explorer"
                             android:layout_column="5"
                             android:contentDescription="@string/explorer_button_description"
                             android:onClick="onSpecialKeyClick"/>

            </GridLayout>

            <ru.vladamamutova.remotestick.ui.custom.NonScrollableViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
